# siem-backend

./: .dockerignore  .gitattributes  Caddyfile  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  frontend-assets-init.sh  package-lock.json  package.json  tsconfig.json
docs/: DEPLOYMENT.md  SIEM-LAB-SETUP-UBUNTU.md  SIEM-LAB-SETUP.md  debug-report.js  frontend-assets-init.sh  patch-es.js  start.mjs
docs/log-simulator/: Cargo.toml
docs/log-simulator/src/: main.rs
frontend-assets/assets/: alert-dialog-DpZorZpw.js  api-Br8mjBiZ.js  api-BzkP_n1P.js  api-CYbVddxS.js  axios-DNLZCoOn.js  badge-PfPke0NW.js  button-C6z1Qu7m.js  circle-alert-BPP7O2fB.js  dialog-DW-hFAJD.js  download-Drx1u0Lr.js  flagged-DNZWda64.js  globe-B6pdvbKJ.js  hooks-DUlCBWhb.js  incidents-1AG84k3z.js  index-pYq5_GW0.js  input-Bb40ogPi.js  login-XrBedC2L.js  logs-BJf_DvAg.js  plus-DUnFl5Of.js  react-dom-BJpbmwh1.js  reports-DaInt5rG.js  routes-MQ8Xpo4J.js  rules-D66MDWzs.js  select-DUVBbI5k.js  server-Bd8g23fB.js  settings-BixLl0Mj.js  severity-badge-9T1Jxdew.js  sheet-D7sLzFyR.js  soar-CyHUvZYL.js  styles-DCKp8spY.css  textarea-Dz5i39wY.js  trash-2-D6VRubM2.js  ueba-BX46aTVJ.js  useMutation-DtQtD-Gs.js  users-B-3h5U4V.js  x-DUscIa3L.js
prisma/: generate-api-key.ts  schema.prisma  seed-correlation-rules.ts
scripts/: generate-synthetic-logs.ts
src/: app.module.ts  main.ts
src/@types/: express.d.ts
src/admin/: admin.controller.ts  admin.service.ts
src/audit/: audit.controller.ts  (+2 more)
templates/: daily-digest.hbs  incident-alert.hbs  mfa-email.hbs  report.tex.hbs
(+98 files in other folders)
